# fgp-browser

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  manifest.json
.fgp/: skill.json
examples/: quickstart.rs
extension/: README.md  background.js
scripts/: connect-mode.sh
src/: extension_bridge.rs  main.rs  models.rs  service.rs
src/browser/: aria.rs  client.rs  mod.rs
tests/: integration.rs
