[package]
name = "fgp-browser"
version = "0.1.0"
edition = "2021"
description = "FGP daemon for browser automation via Chrome DevTools Protocol - 292x faster than Playwright MCP"
license = "MIT"
repository = "https://github.com/fast-gateway-protocol/browser"
authors = ["Wolfgang Schoenberger"]
keywords = ["browser", "automation", "chrome", "cdp", "fgp"]
categories = ["development-tools", "web-programming"]

[[bin]]
name = "browser-gateway"
path = "src/main.rs"

[dependencies]
# FGP daemon SDK
fgp-daemon = "0.1"

# Chrome DevTools Protocol
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "fs", "process"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shellexpand = "3"
daemonize = "0.5"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
libc = "0.2"
chrono = "0.4"
